# Reproducible_analysis_development

./: .gitignore  Bradford_parks_info.ipynb  Get_parkrun_locations.ipynb  Map_park_photos.ipynb  Peel_park.tif  README.md  environment-old.yml  environment.yml  get_OSM_data.ipynb  peel_park_image_locations.geojson  pyproject.toml  safer_parks_functions.ipynb  visability_analysis.ipynb  visibility_raster.tif
notes_and_experiments/: layers.md  park_bounds_calculation.ipynb  park_entrance_calculation.ipynb  park_entrance_calculation_2.ipynb  visibility_analysis.md
src/safer_parks/: __init__.py  bounds.py  entrances.py  key_functions.py
